--- a/MvcCacheRedis/Views/Productos/Details.cshtml
+++ b/MvcCacheRedis/Views/Productos/Details.cshtml
@@ -9,7 +9,7 @@
 <a asp-controller="Productos"
     asp-action="SeleccionarFavorito"
     asp-route-id="@Model.IdProducto">
-    <img src="~/images/favorito.png" style="width:40px; height: 40px"/>
+    <img src="~/images/favorite.png" style="width:40px; height: 40px"/>
 </a>
 
 <div>
